university links added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <td>Mustafa</td>
                 <td>Iraqi</td>
                 <td>University of Mousul</td>
-                <td><a href="http://www.damascusuniversity.edu.sy/">Link to University of Mousul</a></td>
+                <td><a href="https://www.uomosul.edu.iq/en/">Link to University of Mousul</a></td>
             </tr>
             <tr>
                 <td>Burak</td>
@@ -54,37 +54,37 @@
                 <td>Melih</td>
                 <td>Turkish</td>
                 <td>Bogazici University</td>
-                <td><a href="https://www.anadolu.edu.tr/en">Link to Bogazici University</a></td>
+                <td><a href="http://boun.edu.tr/en-US/Index">Link to Bogazici University</a></td>
             </tr>
             <tr>
                 <td>Yusra</td>
                 <td>Eritrean</td>
                 <td>Istanbul Kultur University</td>
-                <td><a href="https://www.anadolu.edu.tr/en">Link to Istanbul Kultur University</a></td>
+                <td><a href="https://www.iku.edu.tr/en">Link to Istanbul Kultur University</a></td>
             </tr>
             <tr>
                 <td>Muhammed</td>
                 <td>Iraqi</td>
                 <td>University of Mousul</td>
-                <td><a href="https://www.anadolu.edu.tr/en">Link to University of Mousul</a></td>
+                <td><a href="https://www.uomosul.edu.iq/en/">Link to University of Mousul</a></td>
             </tr>
             <tr>
                 <td>Merve</td>
                 <td>Turkish</td>
                 <td>Osmangazi University</td>
-                <td><a href="https://www.anadolu.edu.tr/en">Link to Osmangazi University</a></td>
+                <td><a href="https://www.ogu.edu.tr/en">Link to Osmangazi University</a></td>
             </tr>
             <tr>
                 <td>Oktay</td>
                 <td>Turkish</td>
                 <td>Izzet Baysal University</td>
-                <td><a href="https://www.anadolu.edu.tr/en">Link to Izzet Baysal University</a></td>
+                <td><a href="http://www.ibu.edu.tr/en">Link to Izzet Baysal University</a></td>
             </tr>
             <tr>
                 <td>Menel</td>
                 <td>Tunusian</td>
                 <td>Fatih Sultan Mehmet University</td>
-                <td><a href="https://www.anadolu.edu.tr/en">Link to Fatih Sultan Mehmet University</a></td>
+                <td><a href="http://www.fatihsultan.edu.tr/en/">Link to Fatih Sultan Mehmet University</a></td>
             </tr>
         </table>
     </section>
