label tags added

--- a/sign_up.html
+++ b/sign_up.html
@@ -20,12 +20,17 @@
     <section>
         <h2>Re:Coded fellows</h2>
         <form>
-            Name: <input type="text"><br>
-            E-mail: <input type="email" placeholder="email@example.com"><br>
-           Password: <input type="password"><br>
-          Gender: <input type="text"><br>
-          Phone number: <input type="tel"><br>
-          <input type="submit" value="Sign up"><br>
+            <label for="other">Name</label>
+            <input type="text"><br>';[p';;p''''''''''''']/
+            <label for="other">Email</label>
+            <input type="email" placeholder="email@example.com"><br>
+            <label for="password">Password</label>
+            <input type="password"><br>
+            <label for="gender">gender</label>
+            <input type="text"><br>
+            <label for="phone">Phone Number</label>
+            <input type="tel"><br>
+            <input type="submit" value="Sign up"><br>
         </form>
     </section>
     </main>      
