--- a/sign_up.html
+++ b/sign_up.html
@@ -21,7 +21,7 @@
         <h2>Re:Coded fellows</h2>
         <form>
             <label for="other">Name</label>
-            <input type="text"><br>';[p';;p''''''''''''']/
+            <input type="text"><br>
             <label for="other">Email</label>
             <input type="email" placeholder="email@example.com"><br>
             <label for="password">Password</label>
