label tags changed

--- a/sign_up.html
+++ b/sign_up.html
@@ -20,16 +20,16 @@
     <section>
         <h2>Re:Coded fellows</h2>
         <form>
-            <label for="other">Name</label>
-            <input type="text"><br>
-            <label for="other">Email</label>
-            <input type="email" placeholder="email@example.com"><br>
+            <label for="name">Name</label>
+            <input type="text" name="name"><br>
+            <label for="email">Email</label>
+            <input type="email" name="email" placeholder="email@example.com"><br>
             <label for="password">Password</label>
-            <input type="password"><br>
+            <input type="password" name="password"><br>
             <label for="gender">gender</label>
-            <input type="text"><br>
+            <input type="text" name="gender"><br>
             <label for="phone">Phone Number</label>
-            <input type="tel"><br>
+            <input type="tel" name="phone"><br>
             <input type="submit" value="Sign up"><br>
         </form>
     </section>
